fix: pagination overflow

--- a/src/components/Panel/index.scss
+++ b/src/components/Panel/index.scss
@@ -265,7 +265,7 @@
           border-radius: 30px;
         }
         &::before {
-          background-color: $purple-dim;
+          background-color: $purple-deep;
           transform: translateX(-100%);
           transition: all 0.5s cubic-bezier(0.86, -0.02, 0.08, 1.02) 0s;
         }
