--- a/src/views/Inspiration/index.scss
+++ b/src/views/Inspiration/index.scss
@@ -1,6 +1,7 @@
 #inspiration {
   .page {
-    padding-top: 16px;
+    // FIX: pagination overflow
+    padding: 16px 0 1px;
     @include card-page;
   }
 
